[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EXP-System-Dialog/Dialog Editor/dialog_editor.gd" type="Script" id=1]

[node name="Dialog_Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 256 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="Close_BTN" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 47.0
margin_bottom = 20.0
hint_tooltip = "Close the Dialog Editor."
text = "Close"

[node name="Back_BTN" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 51.0
margin_right = 93.0
margin_bottom = 20.0
hint_tooltip = "Return to the Story Editor."
text = "Back"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/VBoxContainer"]
margin_left = 97.0
margin_right = 101.0
margin_bottom = 20.0

[node name="Add_Node_BTN" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 105.0
margin_right = 180.0
margin_bottom = 20.0
hint_tooltip = "Add a new node to the graph."
text = "Add Node"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/VBoxContainer"]
margin_left = 184.0
margin_right = 188.0
margin_bottom = 20.0

[node name="Human_Readable_LBL" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 192.0
margin_top = 3.0
margin_right = 378.0
margin_bottom = 17.0
text = "Human Readable Description"

[node name="GraphEdit" type="GraphEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Close_BTN" to="." method="_on_Close_BTN_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Back_BTN" to="." method="_on_Back_BTN_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Add_Node_BTN" to="." method="_on_Add_Node_BTN_pressed"]
[connection signal="connection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
